--- a/src/pages/products/Products.css
+++ b/src/pages/products/Products.css
@@ -66,8 +66,8 @@
     .card-container {
         display: flex;
         flex-wrap: wrap;
-        margin-left: 10rem;
-      
+        margin-left: 15rem;
+        /* margin-right: 15rem; */
         margin-top: 2rem;
         z-index: -2;
       
