--- a/src/pages/recommended/Recommended.css
+++ b/src/pages/recommended/Recommended.css
@@ -10,6 +10,21 @@
     font-size: 20px;
   }
 
+  @media(min-width:768px) and (max-width:1024px){
+    .recommended-flex {
+      display: flex;
+      margin-left: 15rem;
+      margin-right: 5rem;
+    }
+    
+    .recommended-title {
+      margin-left: 20rem;
+      margin-bottom: 20px;
+      margin-top: 20px;
+      font-size: 20px;
+    }
+  }
+
 
   @media (max-width: 768px) {
     .recommended-flex {
