--- a/src/pages/products/Products.css
+++ b/src/pages/products/Products.css
@@ -11,13 +11,13 @@
     border: 2px solid #ededed;
     padding: 20px;
     cursor: pointer;
-    height: 30rem;  /*//dd */
+    height: 30rem;  
   }
   
   .card-img {
     width: 13rem;
     margin-bottom: 1rem;
-    max-height: 12rem;  /*//dd */
+    max-height: 12rem;  
   }
   
   .card-title {
@@ -51,7 +51,7 @@
   @media (max-width: 768px) {
     .card-container {
       width: 100%;
-      margin-left: 0; /* Remove sidebar offset */
+      margin-left: 0; 
       padding: 1rem;
       justify-content: center;
     }
